@@ -2,7 +2,6 @@ package no.nav.melosys.domain.arkiv;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.google.common.collect.MoreCollectors;
 import no.nav.melosys.domain.Fagsak;
@@ -83,7 +82,7 @@ public class OpprettJournalpost extends Journalpost {
         final var behandlingsgrunnlag = fagsak.hentSistAktivBehandling().getBehandlingsgrunnlag();
         opprettJournalpost.setHoveddokument(lagFysiskHovedDokumentAltinn(hovedDokument, behandlingsgrunnlag));
         opprettJournalpost.setInnhold(opprettJournalpost.getHoveddokument().getTittel());
-        opprettJournalpost.setVedlegg(dokumenter.stream().map(FysiskDokument::lagFysiskDokumentAltinn).collect(Collectors.toList()));
+        opprettJournalpost.setVedlegg(dokumenter.stream().map(FysiskDokument::lagFysiskDokumentAltinn).toList());
         opprettJournalpost.setSaksnummer(fagsak.getSaksnummer());
         opprettJournalpost.setMottaksKanal(ALTINN);
         opprettJournalpost.setEksternReferanseId(hovedDokument.getSoknadID());
@@ -117,12 +116,13 @@ public class OpprettJournalpost extends Journalpost {
         opprettJournalpost.setJournalførendeEnhet(MEDLEMSKAP_OG_AVGIFT);
         opprettJournalpost.setTema(MEDLEMSKAP);
         opprettJournalpost.setSaksnummer(bestilling.getSaksnummer());
-        opprettJournalpost.setBrukerId(bestilling.getBrukerFnr());
-        opprettJournalpost.setBrukerIdType(BrukerIdType.FOLKEREGISTERIDENT);
+        opprettJournalpost.setBrukerId(bestilling.getHovedpartId());
+        opprettJournalpost.setBrukerIdType(bestilling.getHovedpartIdType());
         opprettJournalpost.setKorrespondansepartId(bestilling.getMottakerId());
         opprettJournalpost.setKorrespondansepartNavn(bestilling.getMottakerNavn());
         opprettJournalpost.setKorrespondansepartIdType(bestilling.getMottakerIdType());
         opprettJournalpost.setInnhold(opprettJournalpost.getHoveddokument().getTittel());
+        opprettJournalpost.setVedlegg(FysiskDokument.lagFysiskDokumentListeFraVedlegg(bestilling, bestilling.getVedlegg()));
 
         return opprettJournalpost;
     }
