@@ -71,7 +71,7 @@ public class OppgaveFasadeImpl implements OppgaveFasade {
 
         return oppgaver.stream().map(OppgaveFasadeImpl::oppgaveMappingDtoTilDomain)
             .filter(erGyldigBehandlingsoppgave)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
@@ -230,7 +230,7 @@ public class OppgaveFasadeImpl implements OppgaveFasade {
 
         return oppgaveConsumer.hentOppgaveListe(oppgaveSearchRequest).stream()
             .map(OppgaveFasadeImpl::oppgaveMappingDtoTilDomain)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
@@ -244,7 +244,7 @@ public class OppgaveFasadeImpl implements OppgaveFasade {
 
         return oppgaveConsumer.hentOppgaveListe(oppgaveSearchRequest).stream()
             .map(OppgaveFasadeImpl::oppgaveMappingDtoTilDomain)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
@@ -260,7 +260,7 @@ public class OppgaveFasadeImpl implements OppgaveFasade {
 
         return oppgaveConsumer.hentOppgaveListe(oppgaveSearchRequest).stream()
             .map(OppgaveFasadeImpl::oppgaveMappingDtoTilDomain)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     static Oppgave oppgaveMappingDtoTilDomain(OppgaveDto oppgaveDto) {
@@ -269,6 +269,7 @@ public class OppgaveFasadeImpl implements OppgaveFasade {
         domainOppgaveBuilder
             .setAktivDato(oppgaveDto.getAktivDato())
             .setAktørId(oppgaveDto.getAktørId())
+            .setOrgnr(oppgaveDto.getOrgnr())
             .setBeskrivelse(oppgaveDto.getBeskrivelse())
             .setOpprettetTidspunkt(oppgaveDto.getOpprettetTidspunkt())
             .setFristFerdigstillelse(oppgaveDto.getFristFerdigstillelse())
