@@ -1,14 +1,19 @@
 package no.nav.melosys.service.unntak;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 
+import no.finn.unleash.Unleash;
 import no.nav.melosys.domain.AnmodningsperiodeSvar;
 import no.nav.melosys.domain.Behandling;
 import no.nav.melosys.domain.Fagsak;
+import no.nav.melosys.domain.Lovvalgsperiode;
 import no.nav.melosys.domain.arkiv.DokumentReferanse;
 import no.nav.melosys.domain.eessi.BucType;
 import no.nav.melosys.domain.kodeverk.Landkoder;
+import no.nav.melosys.domain.kodeverk.Medlemskapstyper;
 import no.nav.melosys.domain.kodeverk.behandlinger.Behandlingsresultattyper;
 import no.nav.melosys.domain.kodeverk.behandlinger.Behandlingsstatus;
 import no.nav.melosys.domain.kodeverk.behandlinger.Behandlingstema;
@@ -21,7 +26,7 @@ import no.nav.melosys.service.LovvalgsperiodeService;
 import no.nav.melosys.service.behandling.BehandlingService;
 import no.nav.melosys.service.behandling.BehandlingsresultatService;
 import no.nav.melosys.service.dokument.sed.EessiService;
-import no.nav.melosys.service.kontroll.unntak.AnmodningUnntakKontrollService;
+import no.nav.melosys.service.kontroll.feature.unntak.AnmodningUnntakKontrollService;
 import no.nav.melosys.service.oppgave.OppgaveService;
 import no.nav.melosys.service.saksflyt.ProsessinstansService;
 import no.nav.melosys.service.validering.Kontrollfeil;
@@ -46,6 +51,7 @@ public class AnmodningUnntakService {
     private final EessiService eessiService;
     private final AnmodningUnntakKontrollService anmodningUnntakKontrollService;
     private final JoarkFasade joarkFasade;
+    private final Unleash unleash;
 
     public AnmodningUnntakService(BehandlingService behandlingService,
                                   BehandlingsresultatService behandlingsresultatService, OppgaveService oppgaveService,
@@ -54,7 +60,7 @@ public class AnmodningUnntakService {
                                   LovvalgsperiodeService lovvalgsperiodeService,
                                   LandvelgerService landvelgerService,
                                   EessiService eessiService,
-                                  AnmodningUnntakKontrollService anmodningUnntakKontrollService, JoarkFasade joarkFasade) {
+                                  AnmodningUnntakKontrollService anmodningUnntakKontrollService, JoarkFasade joarkFasade, Unleash unleash) {
         this.behandlingService = behandlingService;
         this.behandlingsresultatService = behandlingsresultatService;
         this.oppgaveService = oppgaveService;
@@ -65,6 +71,7 @@ public class AnmodningUnntakService {
         this.eessiService = eessiService;
         this.anmodningUnntakKontrollService = anmodningUnntakKontrollService;
         this.joarkFasade = joarkFasade;
+        this.unleash = unleash;
     }
 
     @Transactional
@@ -99,7 +106,22 @@ public class AnmodningUnntakService {
     public void anmodningOmUnntakSvar(long behandlingID, String ytterligereInfo) {
         Behandling behandling = behandlingService.hentBehandling(behandlingID);
         validerBehandlingstemaUnntak(behandling);
-        validerSvar(behandling);
+        validerBehandlingsstatus(behandling);
+
+        if (unleash.isEnabled("melosys.eessi.handlingssjekk_sed")) {
+            String rinaSaksnummer = behandling.hentSedDokument().getRinaSaksnummer();
+            if (!eessiService.kanOppretteSedPåBuc(rinaSaksnummer)) {
+                throw new FunksjonellException("Kan ikke opprette Sed på rinaSaknummer: " + rinaSaksnummer);
+            }
+        }
+
+        AnmodningsperiodeSvar anmodningsperiodeSvar =
+            anmodningsperiodeService.hentAnmodningsperiodeSvarForBehandling(behandlingID);
+        validerSvar(anmodningsperiodeSvar);
+
+        Lovvalgsperiode lovvalgsperiode = Lovvalgsperiode.av(anmodningsperiodeSvar, Medlemskapstyper.PLIKTIG);
+        lovvalgsperiodeService.lagreLovvalgsperioder(behandlingID, Collections.singleton(lovvalgsperiode));
+
         prosessinstansService.opprettProsessinstansAnmodningOmUnntakMottakSvar(behandling, ytterligereInfo);
         oppgaveService.ferdigstillOppgaveMedSaksnummer(behandling.getFagsak().getSaksnummer());
     }
@@ -107,24 +129,18 @@ public class AnmodningUnntakService {
     private static void validerBehandlingstemaUnntak(Behandling behandling) {
         if (behandling.getTema() != Behandlingstema.ANMODNING_OM_UNNTAK_HOVEDREGEL) {
             throw new FunksjonellException("Behandling er ikke av tema ANMODNING_OM_UNNTAK_HOVEDREGEL");
-        } else if (behandling.getStatus() == Behandlingsstatus.AVSLUTTET) {
+        }
+    }
+
+    private static void validerBehandlingsstatus(Behandling behandling) {
+        if (behandling.getStatus() == Behandlingsstatus.AVSLUTTET) {
             throw new FunksjonellException("Behandlingen er avsluttet");
         }
     }
 
-    private void validerSvar(Behandling behandling) {
-        Optional<AnmodningsperiodeSvar> anmodningsperiodeSvar = anmodningsperiodeService
-            .hentAnmodningsperiodeSvarForBehandling(behandling.getId()).stream().findFirst();
-        if (anmodningsperiodeSvar.isEmpty()) {
-            throw new FunksjonellException("Finner ingen AnmodningsperiodeSvar for behandling " + behandling.getId());
-        }
-
-        if (lovvalgsperiodeService.hentLovvalgsperioder(behandling.getId()).isEmpty()) {
-            throw new FunksjonellException("Finner ingen Lovvalgsperioder for behandling " + behandling.getId());
-        }
-
-        if (anmodningsperiodeSvar.get().erAvslag()) {
-            validerFritekstLengde(anmodningsperiodeSvar.get());
+    private void validerSvar(AnmodningsperiodeSvar anmodningsperiodeSvar) {
+        if (anmodningsperiodeSvar.erAvslag()) {
+            validerFritekstLengde(anmodningsperiodeSvar);
         }
     }
 
@@ -138,7 +154,7 @@ public class AnmodningUnntakService {
         Collection<Kontrollfeil> feilValideringer = anmodningUnntakKontrollService.utførKontroller(behandlingID);
         if (!feilValideringer.isEmpty()) {
             throw new ValideringException("Feil i validering. Kan ikke sende anmodning om unntak.",
-                feilValideringer.stream().map(Kontrollfeil::tilDto).collect(Collectors.toList()));
+                feilValideringer.stream().map(Kontrollfeil::tilDto).toList());
         }
     }
 }
